--- a/ipynb/CellOracle.ipynb
+++ b/ipynb/CellOracle.ipynb
@@ -23,6 +23,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2c248472-fb43-44f8-a62c-133f9009f1ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cell oracle dependency 해결"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b89b743-5171-4114-b899-d56ee7ccf49a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conda create -n celloracle python=3.10\n",
+    "conda install -c conda-forge \\\n",
+    "  numpy=1.26.4 \\\n",
+    "  pandas=1.5.3 \\\n",
+    "  anndata=0.10.8 \\\n",
+    "  pybind11>=2.12 \\\n",
+    "  pip \\\n",
+    "  ipykernel \\\n",
+    "  jupyterlab\n",
+    "conda activate celloracle\n",
+    "pip install --no-deps celloracle==0.20.0\n",
+    "conda install -c conda-forge numpy=1.26.4 pandas=1.5.3 anndata=0.10.8 pybind11>=2.12 pip ipykernel jupyterlab\n",
+    "conda install -c anndata=0.10.8 pybind11>=2.12"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdcf0f1d-8385-4b32-b2a2-bdeea75ac98e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b29871d-8c21-45df-ac1a-6815d82e0934",
+   "metadata": {},
+   "source": [
+    "# Initiation"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "id": "85082bd5-48ff-4a07-88bd-8d72024b1e3a",
    "metadata": {},
